[tool.poetry]
name = "utinni"
version = "0.5.0"
description = ""
authors = ["Marcello Salvati <byt3bl33d3r@pm.me>"]
readme = "README.md"
homepage = "https://github.com/byt3bl33d3r/utinni"
repository = "https://github.com/byt3bl33d3r/utinni"
exclude = ["tests"]
include = ["LICENSE"]
license = "GPL-3.0-only"
classifiers = [
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]

packages = [
    { include = "utinni"}
]

[tool.poetry.dependencies]
python = "^3.8.0"
httpx = "^0.16.1"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-asyncio = "*"
flake8 = "*"
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
