[tool.poetry]
name = "utinni"
version = "0.5.1"
description = "Async client library for Empire's RESTful API"
authors = ["Marcello Salvati <byt3bl33d3r@pm.me>"]
readme = "README.md"
homepage = "https://github.com/byt3bl33d3r/Utinni"
repository = "https://github.com/byt3bl33d3r/Utinni"
include = ["LICENSE"]
license = "GPL-3.0-only"
classifiers = [
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]

[tool.poetry.dependencies]
python = ">=3.8.1,<3.12"
httpx = "^0.24.0"

[tool.poetry.group.dev.dependencies]
pytest = "7.3.1"
pytest-asyncio = "0.21.0"
flake8 = "6.0.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
